--- a/scss/core/api/_config.scss
+++ b/scss/core/api/_config.scss
@@ -8,6 +8,6 @@
   @if map.has-key($config, $keys...) {
     @return map.get($config, $keys...);
   } @else {
-    @error "Keys #{list.slash($keys...)} doesn't exist in the config map!";
+    @return null;
   }
 }
