--- a/scss/config/_defaults.scss
+++ b/scss/config/_defaults.scss
@@ -5,6 +5,7 @@
 $config: (
   prefix: '',
   base-font-size: 16,
+  use-theming: true,
   use-reset-styles: true,
   utility-glue: ':',
   fallbacks: (
