--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -8,6 +8,23 @@
 
 // << Insert your base styles here >>
 
+// $olive: (
+//   surface-1: koi.theme(colors, green, 9),
+//   surface-2: koi.theme(colors, green, 8),
+//   surface-3: koi.theme(colors, green, 7),
+//   surface-4: koi.theme(colors, green, 6),
+//   text-1: koi.theme(colors, green, 0),
+//   text-2: koi.theme(colors, green, 1),
+//   text-3: koi.theme(colors, green, 2),
+//   text-4: koi.theme(colors, green, 3),
+// );
+
+// [color-scheme='olive'],
+// [data-theme='olive'] {
+//   color-scheme: olive;
+//   @include koi.generate-color-schemes-css-vars($olive);
+// }
+
 body {
   color: var(--text-1);
   background-color: var(--surface-1);
@@ -18,17 +35,16 @@ h1 {
   @include koi.text-size(4xl);
   font-family: koi.font-family(serif);
   color: koi.accent(6);
-  // color: koi.fill(primary);
-  // color: koi.fill(blue, 3);
-  // color: koi.fill(blue, 8, 0.5);
-  // color: koi.accent(5);
-  // color: var(--color-accent-8);
-  // color: hsl(var(--color-hsl-accent-8));
+  //   // color: koi.fill(primary);
+  //   // color: koi.fill(blue, 3);
+  //   // color: koi.fill(blue, 8, 0.5);
+  //   // color: koi.accent(5);
+  //   // color: var(--color-accent-8);
+  //   // color: hsl(var(--color-hsl-accent-8));
 }
 
 a {
   color: koi.accent(6);
-  // color: koi.fill(primary);
 }
 
 .wrapper {
@@ -41,26 +57,27 @@ a {
 
   &:hover {
     border-color: koi.accent(6);
-    background-color: koi.accent(0);
+    // background-color: koi.fill(gray, 1);
+    background-color: var(--surface-2);
     @include koi.transition-colors(koi.theme(duration, slow));
     // border-color: koi.fill(primary);
-  }
 
-  button {
-    margin-top: 1rem;
+    // @include koi.dark {
+    //   background-color: koi.fill(gray, 8);
+    // }
   }
-}
-
-.lists {
-  margin-top: koi.rem(12);
 }
 
 .loaders {
   display: flex;
   align-items: center;
   gap: 24px;
-  background-color: koi.fill(gray, 8);
+  background-color: koi.fill(gray, 9);
   border-color: koi.accent(6);
+
+  &:hover {
+    background-color: koi.fill(gray, 8);
+  }
 }
 
 .text {
