--- a/scss/base/_color.scss
+++ b/scss/base/_color.scss
@@ -4,12 +4,14 @@
 
 @use '../core' as *;
 
-$custom-prop: color;
+$custom-prop-name: color;
 
 // --------------------------------
 //   CSS Custom Properties
 // --------------------------------
 
 @mixin vars {
-  @include generate-css-color-vars($custom-prop, theme(colors));
+  :root {
+    @include generate-css-color-vars(theme(colors), $custom-prop-name);
+  }
 }
