--- a/scss/base/_duration.scss
+++ b/scss/base/_duration.scss
@@ -4,12 +4,14 @@
 
 @use '../core' as *;
 
-$custom-prop: duration;
+$custom-prop-name: duration;
 
 // --------------------------------
 //   CSS Custom Properties
 // --------------------------------
 
 @mixin vars {
-  @include generate-css-vars($custom-prop, theme(duration));
+  :root {
+    @include generate-css-vars(theme(duration), $custom-prop-name);
+  }
 }
