--- a/scss/base/_shadow.scss
+++ b/scss/base/_shadow.scss
@@ -4,12 +4,14 @@
 
 @use '../core' as *;
 
-$custom-prop: shadow;
+$custom-prop-name: shadow;
 
 // --------------------------------
 //   CSS Custom Properties
 // --------------------------------
 
 @mixin vars {
-  @include generate-css-vars($custom-prop, theme(shadow));
+  :root {
+    @include generate-css-vars(theme(shadow), $custom-prop-name);
+  }
 }
