--- a/scss/core/api/_theme.scss
+++ b/scss/core/api/_theme.scss
@@ -37,26 +37,29 @@
 //   Mixins
 // --------------------------------
 
-// Matches data-theme="light" or data-theme="auto"
-@mixin light() {
-  @media (prefers-color-scheme: light) {
-    @at-root #{selector.nest(':root:not([data-theme=light]):not([data-theme=dark])', &)} {
+// Match color scheme
+@mixin match-color-scheme($color-scheme: light) {
+  @media (prefers-color-scheme: $color-scheme) {
+    @at-root #{selector.nest(':root:not([data-theme=light]):not([color-scheme=light]):not([color-scheme=dark]):not([data-theme=dark])', &)} {
       @content;
     }
   }
-  @at-root #{selector.nest(':root[data-theme=light]', &)} {
+
+  @at-root #{selector-nest(':root[data-theme=#{$color-scheme}], :root[color-scheme=#{$color-scheme}]', &)} {
+    @content;
+  }
+}
+
+// Matches data-theme="light" or data-theme="auto"
+@mixin light() {
+  @include match-color-scheme(light) {
     @content;
   }
 }
 
 // Matches data-theme="dark" or data-theme="auto"
 @mixin dark() {
-  @media (prefers-color-scheme: dark) {
-    @at-root #{selector.nest(':root:not([data-theme=light]):not([data-theme=dark])', &)} {
-      @content;
-    }
-  }
-  @at-root #{selector.nest(':root[data-theme=dark]', &)} {
+  @include match-color-scheme(dark) {
     @content;
   }
 }
