--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -4,6 +4,7 @@
 
 @use 'sass:map';
 
+@use '../core/generators/vars' as *;
 @use '../tokens' as *;
 @use 'colors' as *;
 
@@ -15,11 +16,42 @@ $theme: map.deep-merge($tokens, $theme);
 //   Mixins
 // --------------------------------
 
-// Outputs color scheme aware theme vars
-@mixin theming-vars($color-scheme: light) {
-  :root {
-    @each $key, $value in map.get($theme-colors, $color-scheme) {
-      --#{$key}: $value;
+// Outputs color schemes (light dark, ...)
+@mixin theming-vars() {
+  html {
+    @each $color-scheme, $color-theme in $theme-colors {
+      @include generate-color-schemes-css-vars($color-theme, $color-scheme);
     }
+  }
+
+  :root {
+    color-scheme: light;
+    @include generate-color-schemes-css-vars(map.get($theme-colors, light));
+  }
+
+  @media (prefers-color-scheme: light) {
+    :root {
+      color-scheme: light;
+      @include generate-color-schemes-css-vars(map.get($theme-colors, light));
+    }
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      color-scheme: dark;
+      @include generate-color-schemes-css-vars(map.get($theme-colors, dark));
+    }
+  }
+
+  [color-scheme='light'],
+  [data-theme='light'] {
+    color-scheme: light;
+    @include generate-color-schemes-css-vars(map.get($theme-colors, light));
+  }
+
+  [color-scheme='dark'],
+  [data-theme='dark'] {
+    color-scheme: dark;
+    @include generate-color-schemes-css-vars(map.get($theme-colors, dark));
   }
 }
