--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,7 +5,7 @@
 @use '../config' as *;
 @use '../core' as *;
 @use '../theme' as *;
-@use '../reset';
+@use 'reset';
 
 // Reset
 @if config(use-reset-styles) {
