--- a/scss/theme/tokens/_border.scss
+++ b/scss/theme/tokens/_border.scss
@@ -2,7 +2,7 @@
 //   Border
 // --------------------------------
 
-@use '../core/helpers/unit' as *;
+@use '../../core/helpers/unit' as *;
 
 $radius: (
   xs: rem(2),
