--- a/scss/config/_defaults.scss
+++ b/scss/config/_defaults.scss
@@ -4,9 +4,10 @@
 
 $config: (
   prefix: '',
-  base-font-size: 16,
   use-theming: true,
   use-reset-styles: true,
+  spacer: 1rem,
+  base-font-size: 16,
   utility-glue: ':',
   fallbacks: (
     colors: 6,
