--- a/scss/core/generators/_utilities.scss
+++ b/scss/core/generators/_utilities.scss
@@ -12,10 +12,32 @@
 @use '../api/theme' as *;
 @use '../helpers' as *;
 
-@mixin utility-class($utility, $breakpoint: null) {
+// Create a single responsive utility
+@mixin create-responsive-utility($class) {
+  $class: str-escape($class);
+  $util-glue: config(utility-glue);
+  $breakpoints: theme(screens);
+
+  .#{$class} {
+    @content;
+  }
+
+  @each $breakpoint, $-value in $breakpoints {
+    $infix: str-escape(#{'' + $breakpoint + $util-glue});
+
+    @include mq.from($breakpoint) {
+      .#{$infix + $class} {
+        @content;
+      }
+    }
+  }
+}
+
+// Create multiple utilities from an utility map.
+@mixin utility-class($utility-map, $breakpoint: null) {
   $prefix: config(prefix) + '-';
   $util-glue: config(utility-glue);
-  $values: map.get($utility, values);
+  $values: map.get($utility-map, values);
 
   // If the values are a list or string, convert it into a map
   @if meta.type-of($values) == 'string' or meta.type-of(list.nth($values, 1)) != 'list' {
@@ -23,13 +45,13 @@
   }
 
   @each $key, $value in $values {
-    $properties: map.get($utility, property);
+    $properties: map.get($utility-map, property);
 
-    $property-class: if(map.has-key($utility, class), map.get($utility, class), list.nth($properties, 1));
+    $property-class: if(map.has-key($utility-map, class), map.get($utility-map, class), list.nth($properties, 1));
     $property-class: if($property-class == null, $key, $property-class);
     $property-class: str-escape($property-class);
 
-    $local-vars: map-get($utility, local-vars);
+    $local-vars: map-get($utility-map, local-vars);
 
     @if $value != null {
       @if meta.type-of($value) == 'string' {
@@ -58,6 +80,7 @@
   }
 }
 
+// Generate utilities from a map of utility maps
 @mixin generate-utilities($utilities) {
   // Generate standard utilities first
   @each $key, $utility in $utilities {
